Add support for Subversion origins
